5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1633_2919.log
== TEST (2019-04-02 18:14:45) 
-- CODE:
altura(input 1 =(float)("digite a altura"))
altura(input 2 =(float)("digite a altura"))
altura(input 3 =(float)("digite a altura"))
altura(input 4 = (float)("digite a altura"))


total = (round(print ))

-- ERROR:
File "XXXX", line 1
    altura(input 1 =(float)("digite a altura"))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:15) 
-- CODE:
altura(input 1 =(float)("digite a altura 1"))
altura(input 2 =(float)("digite a altura 2"))
altura(input 3 =(float)("digite a altura 3"))
altura(input 4 = (float)("digite a altura 4"))


total = (round(print ))

-- ERROR:
File "XXXX", line 1
    altura(input 1 =(float)("digite a altura 1"))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
